finished really horrible basic layout for the menu page

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -17,6 +17,8 @@
 
   <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
   <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
+  
+  <!-- Fonts -->
 
   <!--CSS pages -->
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
@@ -35,44 +37,11 @@
 <body>
   <% include ../views/partials/_header %>
 
-<!-- 
-  <div class="flex">
-      <div class="containerSize">
-        <div class="hideImageStuff">
-          <img class ="imageSize" src="https://images.pexels.com/photos/617278/pexels-photo-617278.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
-        </div>
-        <h1></h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
-        </p>
-      </div>
-      <div class="containerSize">
-        <div class="hideImageStuff">
-          <img class ="imageSize" src="https://images.immediate.co.uk/volatile/sites/4/2018/08/iStock_000044061370_Medium-fa5f8aa.jpg?quality=45&crop=5px,17px,929px,400px&resize=960,413">
-        </div>
-        <h1></h1>
-        <p>
-    
-        </p>
-      </div>
-      <div>
-        <div class="hideImageStuff">
-          <img class ="imageSize" src="https://images.mentalfloss.com/sites/default/files/styles/mf_image_16x9/public/munchkinhed.png?itok=oeH4evcQ&resize=1100x1100">
-        </div>
-        <h1></h1>
-        <p>
-   
-        </p>
-      </div>
-    </div> -->
-
   <section class="vamp-menu container">
 
     <div class="row">
-
       <figure class="col-sm">
-        <div class="blood">
+        <div class="menus">
           <img alt="picture" src="/images/trueblood.jpg">
         </div>
         <h1>True Blood Vials</h1>
@@ -105,72 +74,85 @@
     </div>
 
     <div class="row">
-      <div class="col-sm-4">
-        <img src="http://placekitten.com/200/300">
-        <h1>Bloody Cupcakes</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud
-        </p>
-      </div>
-      <div class="col-sm-4">
-        <img src="http://placekitten.com/200/300">
-        <h1>Drippy Blood Cocktail</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud
-        </p>
-      </div>
-      <div class="col-sm-4">
-        <img src="http://placekitten.com/200/300">
-        <h1>Bite Shots</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud
-        </p>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-sm-4">
-        <img src="http://placekitten.com/200/300">
-        <h1>Slayer Soup</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud
-        </p>
+        <figure class="col-sm">
+          <div class="menus">
+            <img alt="picture" src="/images/bloodcupcakes.jpg">
+          </div>
+          <h1>Bloody Cupcakes</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+            magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
+          </p>
+        </figure>
+  
+        <figure class="col-sm">
+          <div class="menus">
+            <img alt="picture" src="/images/cocktail.jpg">
+          </div>
+          <h1>Drippy Blood Cocktail</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+            magna aliqua. Ut enim ad minim veniam, quis nostrud
+          </p>
+        </figure>
+  
+        <figure class="col-sm">
+          <div class="menus">
+            <img alt="picture" src="/images/biteshots.jpg">
+          </div>
+          <h1>Bite Shots</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+            magna aliqua. Ut enim ad minim veniam, quis nostrud
+          </p>
+        </figure>
       </div>
 
-      <div class="col-sm-4">
-        <img src="http://placekitten.com/200/300">
-        <h1>Fresh Bloody Hearts</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud
-        </p>
-      </div>
+      <div class="row">
+          <figure class="col-sm">
+            <div class="blood">
+              <img alt="picture" src="/images/slayersoup.jpg">
+            </div>
+            <h1>Slayer Soup</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+              magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
+            </p>
+          </figure>
+    
+          <figure class="col-sm">
+            <div class="menus">
+              <img alt="picture" src="/images/heart.png">
+            </div>
+            <h1>Fresh Bloody Hearts</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+              magna aliqua. Ut enim ad minim veniam, quis nostrud
+            </p>
+          </figure>
+    
+          <figure class="col-sm">
+            <div class="menus">
+              <img alt="picture" src="/images/fleshbuds.png">
+            </div>
+            <h1>Flesh Rosebuds</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+              magna aliqua. Ut enim ad minim veniam, quis nostrud
+            </p>
+          </figure>
+        </div>
 
-      <div class="col-sm-4">
-        <img src="http://placekitten.com/200/300">
-        <h1>Flesh Rosebuds</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud
-        </p>
-      </div>
-    </div>
+        <div class="row">
+          <figure class="col-sm-4">
+              <div class="blood">
+                <img alt="picture" src="/images/cheekshanks.jpg">
+              </div>
+              <h1>Cheek Shanks with Blood Reduction</h1>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
+              </p>
+            </figure>
+        </div>
 
-    <div class="row">
-      <div class="col-sm-4">
-        <img src="http://placekitten.com/200/300">
-        <h1>Cheek Shanks with Blood Reduction</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud
-        </p>
-      </div>
-    </div>
-    </div>
   </section>
   <% include ../views/partials/_footer %>
 
