added fonts to the page

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -19,7 +19,9 @@
   <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
   
   <!-- Fonts -->
-
+  <link href="https://fonts.googleapis.com/css?family=Nosifer" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Jolly+Lodger|Roboto" rel="stylesheet">
+  
   <!--CSS pages -->
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
   <link rel="stylesheet" href="/styles/header.css" type="text/css" />
@@ -44,7 +46,7 @@
         <div class="menus">
           <img alt="picture" src="/images/trueblood.jpg">
         </div>
-        <h1>True Blood Vials</h1>
+        <h2>True Blood Vials</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
         </p>
@@ -54,7 +56,7 @@
         <div class="menus">
           <img alt="picture" src="/images/bloodpunch.jpg">
         </div>
-        <h1>Blood Punch</h1>
+        <h2>Blood Punch</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud
@@ -65,7 +67,7 @@
         <div class="menus">
           <img alt="picture" src="/images/fangcookies.jpg">
         </div>
-        <h1>Fang Cookies</h1>
+        <h2>Fang Cookies</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud
@@ -78,7 +80,7 @@
           <div class="menus">
             <img alt="picture" src="/images/bloodcupcakes.jpg">
           </div>
-          <h1>Bloody Cupcakes</h1>
+          <h2>Bloody Cupcakes</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
           </p>
@@ -88,7 +90,7 @@
           <div class="menus">
             <img alt="picture" src="/images/cocktail.jpg">
           </div>
-          <h1>Drippy Blood Cocktail</h1>
+          <h2>Drippy Blood Cocktail</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud
@@ -99,7 +101,7 @@
           <div class="menus">
             <img alt="picture" src="/images/biteshots.jpg">
           </div>
-          <h1>Bite Shots</h1>
+          <h2>Bite Shots</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud
@@ -112,7 +114,7 @@
             <div class="blood">
               <img alt="picture" src="/images/slayersoup.jpg">
             </div>
-            <h1>Slayer Soup</h1>
+            <h2>Slayer Soup</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
             </p>
@@ -122,7 +124,7 @@
             <div class="menus">
               <img alt="picture" src="/images/heart.png">
             </div>
-            <h1>Fresh Bloody Hearts</h1>
+            <h2>Fresh Bloody Hearts</h2>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua. Ut enim ad minim veniam, quis nostrud
@@ -133,7 +135,7 @@
             <div class="menus">
               <img alt="picture" src="/images/fleshbuds.png">
             </div>
-            <h1>Flesh Rosebuds</h1>
+            <h2>Flesh Rosebuds</h2>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua. Ut enim ad minim veniam, quis nostrud
@@ -146,7 +148,7 @@
               <div class="blood">
                 <img alt="picture" src="/images/cheekshanks.jpg">
               </div>
-              <h1>Cheek Shanks with Blood Reduction</h1>
+              <h2>Cheek Shanks with Blood Reduction</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
                 magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
               </p>
