--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -1,6 +1,10 @@
 body {
   background-color: #a24141;
   color: white;
+  font-family: 'Roboto', sans-serif;
 }
 
+h2 {
+  font-family: 'Jolly Lodger', cursive;
+}
 
