--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -15,6 +15,10 @@
   <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
   <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
 
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Nosifer" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Jolly+Lodger|Roboto" rel="stylesheet">
+  
   <!--CSS pages -->
   <link rel="stylesheet" href="/styles/layout.css" type="text/css"/>
   <link rel="stylesheet" href="/styles/header.css" type="text/css"/>
