--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+    <title>Register</title>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
-    <title>User Register</title>
+    <!--Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
+    <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
+    
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Nosifer" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Jolly+Lodger|Roboto" rel="stylesheet">
+
+      <!--CSS pages -->
+    <link rel="stylesheet" href="/styles/layout.css" type="text/css"/>
+    <link rel="stylesheet" href="/styles/header.css" type="text/css"/>
+    <link rel="stylesheet" href="/styles/footer.css" type="text/css"/>
+    <link rel="stylesheet" href="/styles/register.css" type="text/css"/>
+
+    <!--Javascript -->
+    <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
+      
   </head>
 
   <body style="font-size:20px; padding:50px;">
