removed type error and added post route for checkout

--- a/views/order.ejs
+++ b/views/order.ejs
@@ -124,7 +124,7 @@
       </tbody>
     </table>
 
-    <form action="/checkout" method="post">
+    <form action="/order" method="POST">
        <button type="submit">Checkout</button>
     </form>
 
