working on the header and footer

--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -2,16 +2,16 @@ footer {
     margin: 4% 4% 15% 4%;
 }
 
-.fa {
+footer .fa {
     padding: 0 3px 0 3px;
 }
 
-.icons {
+footer .icons {
     float: right;
     padding: 1em 0em;
 }
 
-i {
+footer i {
     margin-right: -33px;
     padding: 20px 47px 0px 31px;
 }
