--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,7 +1,7 @@
 
 <header>
   <div class="logo">
-    <img src="http://placekitten.com/50/50">
+      <i class="fal fa-coffin fa-2x"></i>
   </div>
     <span class="title"><h1>Bela Lugosi's Fed</h1></span>
 
@@ -12,5 +12,7 @@
       <li><a href="/order">Order</a></li>
     </ul>
   </nav>
+
+  <div class="line"></div>
 
 </header>
