--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,10 +11,10 @@
 
     <!--Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-    
+
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
-    
+
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Nosifer" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Jolly+Lodger|Roboto" rel="stylesheet">
@@ -27,16 +27,50 @@
 
     <!--Javascript -->
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-      
+
     <!-- Meta Information -->
     <title>Bela Lugosi's Fed</title>
+    <style>
+        .carousel-inner > .carousel-item > img {
+                max-width:60%;
+                height:40%;
+                margin: 0 auto;
+                }
+        .d-block.w-100 {
+            border-radius: 10px;
+        }
+    </style>
 
   </head>
 
   <body>
     <% include ../views/partials/_header %>
-      <img src="https://i.pinimg.com/originals/8c/a5/87/8ca587d0f5503f3e0676ef8eae18c664.jpg">
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="images/fangcookies.jpg" alt="First slide" height="50%">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="images/fleshbuds.png" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="images/heart.png" alt="Third slide">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+
     <% include ../views/partials/_footer %>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 
 </html>
