added a local storage

--- a/views/order.ejs
+++ b/views/order.ejs
@@ -129,7 +129,8 @@
     </table>
 
     <form action="/api/users/order" method="POST">
-       <button type="submit">Checkout</button>
+        
+       <button type="submit" id="checkout">Checkout</button>
     </form>
 
     <% include ../views/partials/_footer %>
