--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -2,10 +2,19 @@ figure {
     margin:0;
 }
 
-.blood {
+h2 {
+  color: #c91507;
+}
 
+p {
+  color: #fbd8c3;
 }
 
 figure img {
     width: 100%;
+}
+
+body {
+  margin-top: 10%;
+  background-color: black;
 }
