--- a/styles/home.scss
+++ b/styles/home.scss
@@ -5,4 +5,5 @@ body {
 
 .carousel-inner > .carousel-item > img {
                 padding-top: 5%;
+                max-height: 70vh;
                 }
