adding more routes

--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -59,7 +59,7 @@
       <button type="submit">Edit</button>
     </div>
     <h2>User Info</h2>
-    <form>
+    <form action="/confirmed" method="POST">
       <label for="Name">Name</label>
       <input type="text" name="Name" />
       <label for="Phone No.">Phone No.</label>
