--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -59,11 +59,12 @@
       <button type="submit">Edit</button>
     </div>
     <h2>User Info</h2>
-    <form action="/confirmed" method="POST">
+
+    <form action="/api/users/checkout" method="POST">
       <label for="Name">Name</label>
-      <input type="text" name="Name" />
+      <input type="text" name="name" />
       <label for="Phone No.">Phone No.</label>
-      <input type="text" name="Phone No." />
+      <input type="text" name="phone_no" />
       <label for="confirm">Confirm</label>
       <input type="Submit" name="confirm"/>
     </form>
