--- a/views/home.ejs
+++ b/views/home.ejs
@@ -29,12 +29,14 @@
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
 
     <!-- Meta Information -->
-    <title>Bela Lugosi's Fed</title>
+    <title>Drac's Snax</title>
 
   </head>
 
   <body>
     <% include ../views/partials/_header %>
+    <br>
+    <h1 class="welcome">Welcome to our lair</h1>
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
