--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -17,11 +17,11 @@
 
   <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
   <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
-  
+
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Nosifer" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Jolly+Lodger|Roboto" rel="stylesheet">
-  
+
   <!--CSS pages -->
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
   <link rel="stylesheet" href="/styles/header.css" type="text/css" />
@@ -50,6 +50,9 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
         </p>
+        <form method="" action="post">
+          <button type="submit">Add to Cart</button>
+        </form>
       </figure>
 
       <figure class="col-sm">
@@ -61,6 +64,9 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud
         </p>
+        <form method="" action="post">
+          <button type="submit">Add to Cart</button>
+        </form>
       </figure>
 
       <figure class="col-sm">
@@ -85,7 +91,7 @@
             magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
           </p>
         </figure>
-  
+
         <figure class="col-sm">
           <div class="menus">
             <img alt="picture" src="/images/cocktail.jpg">
@@ -96,7 +102,7 @@
             magna aliqua. Ut enim ad minim veniam, quis nostrud
           </p>
         </figure>
-  
+
         <figure class="col-sm">
           <div class="menus">
             <img alt="picture" src="/images/biteshots.jpg">
@@ -119,7 +125,7 @@
               magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
             </p>
           </figure>
-    
+
           <figure class="col-sm">
             <div class="menus">
               <img alt="picture" src="/images/heart.png">
@@ -130,7 +136,7 @@
               magna aliqua. Ut enim ad minim veniam, quis nostrud
             </p>
           </figure>
-    
+
           <figure class="col-sm">
             <div class="menus">
               <img alt="picture" src="/images/fleshbuds.png">
@@ -157,7 +163,9 @@
 
   </section>
   <% include ../views/partials/_footer %>
-
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
 </html>
