--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -15,6 +15,11 @@ figure img {
 }
 
 body {
-  margin-top: 10%;
-  background-color: black;
-}
+        margin-top: 10%;
+        background: url('/images/bloody-background.jpg')no-repeat center center fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+
+    }
