--- a/styles/home.scss
+++ b/styles/home.scss
@@ -8,6 +8,10 @@ body {
 
     }
 
+.image {
+    opacity: 0.8
+}
+
 .carousel-inner > .carousel-item > img {
                 padding-top: 5%;
                 max-height: 70vh;
