--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -14,6 +14,10 @@ figure img {
     width: 100%;
 }
 
+.image {
+    opacity: 0.8
+}
+
 body {
         margin-top: 10%;
         background: url('/images/bloody-background.jpg')no-repeat center center fixed;
