--- a/styles/order.scss
+++ b/styles/order.scss
@@ -15,6 +15,10 @@ article img {
     float: left;
 }
 
+.image {
+    opacity: 0.8
+}
+
 body {
         margin-top: 10%;
         background: url('/images/bloody-background.jpg')no-repeat center center fixed;
