fixed navbar transparency without body being transparent and used bootstrap table for order page

--- a/styles/header.scss
+++ b/styles/header.scss
@@ -14,7 +14,7 @@ nav a:hover {
 }
 
 .bg-light {
-  background-color: #b00b0d !important;
+  background-color: rgba(176, 11, 13, 0.8) !important;
   border-bottom: 3px solid black;
 }
 
