--- a/styles/order.scss
+++ b/styles/order.scss
@@ -15,9 +15,11 @@ article img {
     float: left;
 }
 
-.image {
-    opacity: 0.8
+.table-dark {
+    color: #ffffff;
+    background-color: rgba(0,0,0,0.6);
 }
+
 
 body {
         margin-top: 10%;
