--- a/views/order.ejs
+++ b/views/order.ejs
@@ -39,7 +39,6 @@
   </head>
 
   <body>
-    <div class="image">
   <% include ../views/partials/_header %>
     <!-- <article>
       <form method="post" action="/order">
@@ -60,7 +59,7 @@
         <input type="submit" value="Checkout" id="submit">
       </form>
     </article> -->
-    <table>
+    <table class="table-sm table-borderless table-dark">
       <thead>
         <tr>
           <th>Name</th>
@@ -135,7 +134,6 @@
     </form>
 
     <% include ../views/partials/_footer %>
-  </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
