modified table on order and added picture

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -46,7 +46,7 @@
         <div class="menus">
           <img alt="picture" src="/images/trueblood.jpg">
         </div>
-        <h2>True Blood Vials</h2>
+        <h2 id="6">True Blood Vials</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
         </p>
@@ -59,7 +59,7 @@
         <div class="menus">
           <img alt="picture" src="/images/bloodpunch.jpg">
         </div>
-        <h2>Blood Punch</h2>
+        <h2 id="2">Blood Punch</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud
@@ -86,7 +86,7 @@
           <div class="menus">
             <img alt="picture" src="/images/bloodcupcakes.jpg">
           </div>
-          <h2>Bloody Cupcakes</h2>
+          <h2 id="3">Bloody Cupcakes</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
           </p>
@@ -96,7 +96,7 @@
           <div class="menus">
             <img alt="picture" src="/images/cocktail.jpg">
           </div>
-          <h2>Drippy Blood Cocktail</h2>
+          <h2 id="4">Drippy Blood Cocktail</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud
@@ -107,7 +107,7 @@
           <div class="menus">
             <img alt="picture" src="/images/biteshots.jpg">
           </div>
-          <h2>Bite Shots</h2>
+          <h2 id="5">Bite Shots</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud
@@ -120,7 +120,7 @@
             <div class="blood">
               <img alt="picture" src="/images/slayersoup.jpg">
             </div>
-            <h2>Slayer Soup</h2>
+            <h2 id="1">Slayer Soup</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
             </p>
