--- a/views/order.ejs
+++ b/views/order.ejs
@@ -59,70 +59,82 @@
         <input type="submit" value="Checkout" id="submit">
       </form>
     </article> -->
-    <table class="table-sm table-borderless table-dark">
+    <table class="table table-borderless table-dark">
       <thead>
         <tr>
+          <th>Picture</th>
           <th>Name</th>
           <th>Price</th>
-          <th>Quantity</th>
-          <th>Minus</th>
-          <th>Plus</th>
+          <th width="10%">Minus</th>
+          <th width="10%">Quantity</th>
+          <th width="10%">Plus</th>
         </tr>
       </thead>
       <tbody>
         <tr>
+          <td><img height="10%" width="10%" max-width="596px" max-height="640px" src="/images/slayersoup.jpg"/></td>
           <td id="1">Slayer Soup</td>
           <td>9.99</td>
+          <td class="minus"><i class="fas fa-minus-circle"></i></td>
           <td class="quantity">
             <span>0</span>
             <!-- <input type="text" name="quantity" maxlength="3" size="2" value ="0"> -->
           </td>
-          <td class="minus"><i class="fas fa-minus-circle"></i></td>
           <td class="plus"><i class="fas fa-plus-circle"></i></td>
-        </tr><tr>
+        </tr>
+        <tr>
+          <td><img height="10%" width="10%" max-width="596px" max-height="640px" src="/images/slayersoup.jpg"/></td>
           <td id="2">Blood Punch</td>
           <td>9.99</td>
+          <td class="minus"><i class="fas fa-minus-circle"></i></td>
           <td>
             <!-- <input type="text" name="quantity" maxlength="3" size="2" value ="0"> -->
             <span>0</span>
           </td>
-          <td class="minus"><i class="fas fa-minus-circle"></i></td>
           <td class="plus"><i class="fas fa-plus-circle"></i></td>
-        </tr><tr>
+        </tr>
+        <tr>
+          <td><img height="10%" width="10%" max-width="596px" max-height="640px" src="/images/slayersoup.jpg"/></td>
           <td id="3">Bloody Cupcakes</td>
           <td>9.99</td>
+          <td class="minus"><i class="fas fa-minus-circle"></i></td>
           <td>
             <!-- <input type="text" name="quantity" maxlength="3" size="2" value ="0"> -->
             <span>0</span>
           </td>
-          <td class="minus"><i class="fas fa-minus-circle"></i></td>
           <td class="plus"><i class="fas fa-plus-circle"></i></td>
-        </tr><tr>
+        </tr>
+        <tr>
+          <td><img height="10%" width="10%" max-width="596px" max-height="640px" src="/images/slayersoup.jpg"/></td>
           <td id="4">Drippy Blood Cocktails</td>
           <td>9.99</td>
+          <td class="minus"><i class="fas fa-minus-circle"></i></td>
           <td>
             <!-- <input type="text" name="quantity" maxlength="3" size="2" value ="0"> -->
             <span>0</span>
           </td>
-          <td class="minus"><i class="fas fa-minus-circle"></i></td>
           <td class="plus"><i class="fas fa-plus-circle"></i></td>
-        </tr><tr>
+        </tr>
+        <tr>
+          <td><img height="10%" width="10%" max-width="596px" max-height="640px" src="/images/slayersoup.jpg"/></td>
           <td id="5">Bite Shots</td>
           <td>9.99</td>
+          <td class="minus"><i class="fas fa-minus-circle"></i></td>
           <td>
             <!-- <input type="text" name="quantity" maxlength="3" size="2" value ="0"> -->
             <span>0</span>
           </td>
-          <td class="minus"><i class="fas fa-minus-circle"></i></td>
           <td class="plus"><i class="fas fa-plus-circle"></i></td>
-        </tr><tr>
+        </tr>
+        <tr>
+          <td><img height="10%" width="10%" max-width="596px" max-height="640px" src="/images/slayersoup.jpg"/></td>
           <td id="6">True Blood Vials</td>
           <td>9.99</td>
+          <td class="minus"><i class="fas fa-minus-circle"></i></td>
           <td>
             <!-- <input type="text" name="quantity" maxlength="3" size="2" value ="0"> -->
             <span>0</span>
           </td>
-          <td class="minus"><i class="fas fa-minus-circle"></i></td>
           <td class="plus"><i class="fas fa-plus-circle"></i></td>
         </tr>
       </tbody>
