--- a/styles/order.scss
+++ b/styles/order.scss
@@ -18,6 +18,9 @@ article img {
 .table-dark {
     color: #ffffff;
     background-color: rgba(0,0,0,0.6);
+    margin-left:auto;
+    margin-right:auto;
+    max-width: 70vw;
 }
 
 
