fixed bug showing on checkout page by removing picture column in order ejs

--- a/views/order.ejs
+++ b/views/order.ejs
@@ -62,7 +62,7 @@
     <table class="table table-borderless table-dark">
       <thead>
         <tr>
-          <th>Picture</th>
+          <!-- <th>Picture</th> -->
           <th>Name</th>
           <th>Price</th>
           <th width="10%">Minus</th>
@@ -72,7 +72,7 @@
       </thead>
       <tbody>
         <tr>
-          <td><img height="10%" width="10%" max-width="596px" max-height="640px" src="/images/slayersoup.jpg"/></td>
+          <!-- <td><img height="10%" width="10%" max-width="596px" max-height="640px" src="/images/slayersoup.jpg"/></td> -->
           <td id="1">Slayer Soup</td>
           <td>9.99</td>
           <td class="minus"><i class="fas fa-minus-circle"></i></td>
@@ -83,7 +83,7 @@
           <td class="plus"><i class="fas fa-plus-circle"></i></td>
         </tr>
         <tr>
-          <td><img height="10%" width="10%" max-width="596px" max-height="640px" src="/images/slayersoup.jpg"/></td>
+          <!-- <td><img height="10%" width="10%" max-width="596px" max-height="640px" src="/images/slayersoup.jpg"/></td> -->
           <td id="2">Blood Punch</td>
           <td>9.99</td>
           <td class="minus"><i class="fas fa-minus-circle"></i></td>
@@ -94,7 +94,7 @@
           <td class="plus"><i class="fas fa-plus-circle"></i></td>
         </tr>
         <tr>
-          <td><img height="10%" width="10%" max-width="596px" max-height="640px" src="/images/slayersoup.jpg"/></td>
+          <!-- <td><img height="10%" width="10%" max-width="596px" max-height="640px" src="/images/slayersoup.jpg"/></td> -->
           <td id="3">Bloody Cupcakes</td>
           <td>9.99</td>
           <td class="minus"><i class="fas fa-minus-circle"></i></td>
@@ -105,7 +105,7 @@
           <td class="plus"><i class="fas fa-plus-circle"></i></td>
         </tr>
         <tr>
-          <td><img height="10%" width="10%" max-width="596px" max-height="640px" src="/images/slayersoup.jpg"/></td>
+          <!-- <td><img height="10%" width="10%" max-width="596px" max-height="640px" src="/images/slayersoup.jpg"/></td> -->
           <td id="4">Drippy Blood Cocktails</td>
           <td>9.99</td>
           <td class="minus"><i class="fas fa-minus-circle"></i></td>
@@ -116,7 +116,7 @@
           <td class="plus"><i class="fas fa-plus-circle"></i></td>
         </tr>
         <tr>
-          <td><img height="10%" width="10%" max-width="596px" max-height="640px" src="/images/slayersoup.jpg"/></td>
+          <!-- <td><img height="10%" width="10%" max-width="596px" max-height="640px" src="/images/slayersoup.jpg"/></td> -->
           <td id="5">Bite Shots</td>
           <td>9.99</td>
           <td class="minus"><i class="fas fa-minus-circle"></i></td>
@@ -127,7 +127,7 @@
           <td class="plus"><i class="fas fa-plus-circle"></i></td>
         </tr>
         <tr>
-          <td><img height="10%" width="10%" max-width="596px" max-height="640px" src="/images/slayersoup.jpg"/></td>
+          <!-- <td><img height="10%" width="10%" max-width="596px" max-height="640px" src="/images/slayersoup.jpg"/></td> -->
           <td id="6">True Blood Vials</td>
           <td>9.99</td>
           <td class="minus"><i class="fas fa-minus-circle"></i></td>
