--- a/views/confirmed.ejs
+++ b/views/confirmed.ejs
@@ -45,7 +45,7 @@
 
   </div>
   <footer>
-    <button type="button" class="btn btn-dark" tpye="submit"">Back to the lair!</button>
+    <button type="button" class="btn btn-dark" type="submit"">Back to the lair!</button>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
