--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -31,6 +31,9 @@
   <!--Javascript -->
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
 
+  <!-- Menu JS file -->
+  <script type="text/javascript" src="/scripts/menu.js"></script>
+
   <!-- Meta Information -->
   <title>Bela Lugosi's Fed</title>
 
@@ -50,9 +53,8 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
         </p>
-        <form method="" action="post">
-          <button type="submit">Add to Cart</button>
-        </form>
+        <p>9.99</p>
+        <button class="add-to-cart btn btn-light" type="submit">Add to Cart</button>
       </figure>
 
       <figure class="col-sm">
@@ -64,9 +66,8 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud
         </p>
-        <form method="" action="post">
-          <button type="submit">Add to Cart</button>
-        </form>
+        <p>9.99</p>
+        <button class="add-to-cart btn btn-light" type="submit">Add to Cart</button>
       </figure>
 
       <figure class="col-sm">
