--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -17,7 +17,7 @@
           <li class="nav-item">
             <a class="nav-link" href="/menu">Menu</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item cart">
             <a class="nav-link" href="/order">Order</a>
           </li>
         </ul>
