--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -1,6 +1,10 @@
 body {
-  background-color: #a24141;
-  color: white;
+  margin-top: 10%;
+  background: url('/images/bloody-background.jpg')no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   font-family: 'Roboto', sans-serif;
 }
 
