--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -39,129 +39,108 @@
 <body>
   <% include ../views/partials/_header %>
 
-  <section class="vamp-menu container">
-
-    <div class="row">
-      <figure class="col-sm">
+  <section class="flexcontainer">
+    
         <div class="menus">
           <img alt="picture" src="/images/trueblood.jpg">
+
+          <h2>True Blood Vials</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+            magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
+          </p>
         </div>
-        <h2>True Blood Vials</h2>
+     
+        <div class="menus">
+          <img alt="picture" src="/images/bloodpunch.jpg">
+          <h2>Blood Punch</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+            magna aliqua. Ut enim ad minim veniam, quis nostrud
+          </p>
+
+        </div>
+      
+        <div class="menus">
+          <img alt="picture" src="/images/fangcookies.jpg">
+          <h2>Fang Cookies</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+            magna aliqua. Ut enim ad minim veniam, quis nostrud
+          </p>
+  
+        </div>
+  </section>
+
+  <section class="flexcontainer">
+     
+
+
+        <!-- <div class="menus">
+          <img alt="picture" src="/images/bloodcupcakes.jpg">
+        </div>
+        <h2>Bloody Cupcakes</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
+        </p> 
+
+        <div class="menus">
+          <img alt="picture" src="/images/cocktail.jpg">
+        </div>
+        <h2>Drippy Blood Cocktail</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud
+        </p>
+
+        <div class="menus">
+          <img alt="picture" src="/images/biteshots.jpg">
+        </div>
+        <h2>Bite Shots</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud
+        </p> 
+
+        <div class="blood">
+          <img alt="picture" src="/images/slayersoup.jpg">
+        </div>
+        <h2>Slayer Soup</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
         </p>
-        <form method="" action="post">
-          <button type="submit">Add to Cart</button>
-        </form>
-      </figure>
 
-      <figure class="col-sm">
+
         <div class="menus">
-          <img alt="picture" src="/images/bloodpunch.jpg">
+          <img alt="picture" src="/images/heart.png">
         </div>
-        <h2>Blood Punch</h2>
+        <h2>Fresh Bloody Hearts</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud
+        </p> -->
+
+<!-- 
+        <div class="menus">
+          <img alt="picture" src="/images/fleshbuds.png">
+        </div>
+        <h2>Flesh Rosebuds</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud
         </p>
-        <form method="" action="post">
-          <button type="submit">Add to Cart</button>
-        </form>
-      </figure>
+       
 
-      <figure class="col-sm">
-        <div class="menus">
-          <img alt="picture" src="/images/fangcookies.jpg">
-        </div>
-        <h2>Fang Cookies</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud
-        </p>
-      </figure>
-    </div>
-
-    <div class="row">
-        <figure class="col-sm">
-          <div class="menus">
-            <img alt="picture" src="/images/bloodcupcakes.jpg">
-          </div>
-          <h2>Bloody Cupcakes</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
-          </p>
-        </figure>
-
-        <figure class="col-sm">
-          <div class="menus">
-            <img alt="picture" src="/images/cocktail.jpg">
-          </div>
-          <h2>Drippy Blood Cocktail</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud
-          </p>
-        </figure>
-
-        <figure class="col-sm">
-          <div class="menus">
-            <img alt="picture" src="/images/biteshots.jpg">
-          </div>
-          <h2>Bite Shots</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud
-          </p>
-        </figure>
+      <div class="menus">
+        <img alt="picture" src="/images/cheekshanks.jpg">
       </div>
-
-      <div class="row">
-          <figure class="col-sm">
-            <div class="blood">
-              <img alt="picture" src="/images/slayersoup.jpg">
-            </div>
-            <h2>Slayer Soup</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
-            </p>
-          </figure>
-
-          <figure class="col-sm">
-            <div class="menus">
-              <img alt="picture" src="/images/heart.png">
-            </div>
-            <h2>Fresh Bloody Hearts</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua. Ut enim ad minim veniam, quis nostrud
-            </p>
-          </figure>
-
-          <figure class="col-sm">
-            <div class="menus">
-              <img alt="picture" src="/images/fleshbuds.png">
-            </div>
-            <h2>Flesh Rosebuds</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua. Ut enim ad minim veniam, quis nostrud
-            </p>
-          </figure>
-        </div>
-
-        <div class="row">
-          <figure class="col-sm-4">
-              <div class="blood">
-                <img alt="picture" src="/images/cheekshanks.jpg">
-              </div>
-              <h2>Cheek Shanks with Blood Reduction</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
-              </p>
-            </figure>
-        </div>
-
+      <h2>Cheek Shanks with Blood Reduction</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
+      </p> 
+          -->
   </section>
+
   <% include ../views/partials/_footer %>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
